<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Just Testing</string>
    <string name="hello_world">It worked!</string>
    <string name="action_settings">Settings</string>
    <string name="your_name">Your Name</string>
    <string name="total_entries">Total Entries</string>
    <string name="done_button">Done</string>
    <string name="median">Median</string>
    <string name="select_a_number">Select a Number</string>
    <string name="click_button">Click</string>
    <string name="defaultTextView">Removed Name</string>


</resources>
