<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/your_name"
        android:id="@+id/inputNameEditText"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_button"
        android:id="@+id/doneButton"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_entries"
        android:textSize="20sp"
        android:id="@+id/totalTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/median"
        android:textSize="20sp"
        android:id="@+id/medianAvgTextView"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/select_a_number"
        android:id="@+id/numSelectEditText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_button"
        android:id="@+id/clickButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultTextView"
        android:textSize="20sp"
        android:id="@+id/selectionTextView"/>

</LinearLayout>
